[project]
name = "peqes"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "crispy-bulma>=0.12.0",
    "django>=5.2.1",
    "django-browser-reload>=1.18.0",
    "prettyconf>=2.3.0",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest>=8.3.5",
]
prod = [
    "gunicorn>=23.0.0",
]
